--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
+        "laravel-echo": "^1.15.3",
+        "laravel-echo-server": "^1.6.3",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.8.0",
+        "pusher-js": "^8.3.0",
         "sass": "^1.56.1",
         "vite": "^4.4.9"
-    },
-    "dependencies": {
-        "laravel-echo": "^1.15.3",
-        "pusher-js": "^8.3.0"
     }
 }
